--- a/RestaurantViewingApp/Base.lproj/Main.storyboard
+++ b/RestaurantViewingApp/Base.lproj/Main.storyboard
@@ -109,7 +109,7 @@
         <!--Restaurants-->
         <scene sceneID="Dsk-GO-TUd">
             <objects>
-                <tableViewController storyboardIdentifier="RestaurantsListTableViewController" id="HIn-7K-eLU" customClass="RestaurantsListTableViewController" customModule="RestaurantViewingApp" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="RestaurantsListTableViewController" modalPresentationStyle="fullScreen" id="HIn-7K-eLU" customClass="RestaurantsListTableViewController" customModule="RestaurantViewingApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="aq9-QQ-tBv">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -183,7 +183,6 @@
                                     <outlet property="restaurantLocationLabel" destination="9Je-ES-g4m" id="0FK-7G-l4i"/>
                                     <outlet property="restaurantMarkerImageView" destination="eAS-iT-xHO" id="J87-rX-82r"/>
                                     <outlet property="restaurantNameLabel" destination="oWZ-9f-WUX" id="pW6-6u-WTt"/>
-                                    <segue destination="yk1-P5-woN" kind="show" id="Aky-oc-4j1"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -201,7 +200,7 @@
         <!--Title-->
         <scene sceneID="aLI-c0-1vA">
             <objects>
-                <viewController storyboardIdentifier="DetailsFoodViewController" id="yk1-P5-woN" customClass="DetailsFoodViewController" customModule="RestaurantViewingApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="RestaurantDetailsViewController" id="yk1-P5-woN" customClass="RestaurantDetailsViewController" customModule="RestaurantViewingApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="sjn-sG-H7v" customClass="DetailsFoodView" customModule="RestaurantViewingApp" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -345,7 +344,7 @@
                                 <viewLayoutGuide key="frameLayoutGuide" id="qb6-ZM-RpF"/>
                             </scrollView>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="hmm-2Q-xXi">
-                                <rect key="frame" x="187.5" y="301" width="39" height="37"/>
+                                <rect key="frame" x="187.5" y="213" width="39" height="37"/>
                                 <color key="pageIndicatorTintColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="currentPageIndicatorTintColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </pageControl>
@@ -383,7 +382,7 @@
         <!--Navigation Controller-->
         <scene sceneID="q1h-N2-Mnk">
             <objects>
-                <navigationController storyboardIdentifier="RestaurantNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="voW-TA-iZ6" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="RestaurantNavigationController" automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="fullScreen" id="voW-TA-iZ6" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="7or-v7-YK8">
                         <rect key="frame" x="0.0" y="44" width="414" height="96"/>
